--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="images and css\Hover and Active.css" />
         <link rel="stylesheet" href="images and css\Media Query.css" />
         <link rel="stylesheet" href="images and css\Media Query (480px width).css" />
+        <link rel="stylesheet" href="images and css\Media Query (small Laptop).css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
     </head>
